# nantes-traffic-mcp

./: .gitignore  LICENSE  README.md  api_doc.html  pyproject.toml
.github/workflows/: publish.yml
docs/: guide_integration.txt  siri_spec.txt
naolib_mcp/: server.py
tests/: test_server.py
