[project]
name = "naolib-mcp"
version = "0.2.3"
description = "Serveur MCP pour les informations de trafic en temps réel de Naolib (Nantes)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "httpx",
]

[project.scripts]
naolib-mcp = "naolib_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
