[project]
name = "naolib-mcp"
version = "1.1.0"
description = "Serveur MCP pour les informations de trafic en temps réel de Naolib (Nantes)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "httpx",
]

[project.scripts]
naolib-mcp = "naolib_mcp.server:main"

[project.optional-dependencies]
dev = ["twine"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
